Implement basic skeleton of login flow

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,4 @@
 <!doctype html>
-
-
 {% block html_element %}
 {# This generates an <html> element that will have a class indicating the IE version #}
 {# (ie6, ie7, ie8, ie9) if loaded in IE. If you override this block to include #}
@@ -22,6 +20,7 @@
 <body class="{% block body_class %}{% endblock %}">
   {% block body %}{% endblock %}
 
+  <script src="http{% if request.is_secure %}s{% endif %}://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery{% if not debug %}.min{% endif %}.js"></script>
   {% block page_script %}{% endblock %}
 </body>
 </html>
