--- a/lvfu/webapp/templates/new_league.html
+++ b/lvfu/webapp/templates/new_league.html
@@ -1,10 +1,15 @@
-{% extends "base.html" %}
+{% extends "base_webapp.html" %}
 {% load url from future %}
 
 {% block body %}
 <h1>Fantasy Ultimate!</h1>
 <form action="{% url 'new_league' %}" method="POST">
     {% csrf_token %}
+    <select name="event_id">
+      {% for event in events %}
+          <option value="{{ event.pk }}">{{ event.title }}</option>
+      {% endfor %}
+    </select>
     <label for="title">League name:</label>
     <input id="title" name="title" type="text"/>
     <input type="submit" value="Create League" disabled="true"/>
@@ -12,6 +17,7 @@
 {% endblock %}
 
 {% block page_script %}
+{{ block.super }}
 <script src="{{ STATIC_URL }}js/libs/jquery.textchange.js"></script>
 <script>
 $(function() {
