--- a/lvfu/webapp/templates/welcome.html
+++ b/lvfu/webapp/templates/welcome.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_webapp.html" %}
 
 {% block body %}
 <h1>Fantasy Ultimate!</h1>
@@ -14,7 +14,4 @@
 
 {% include "includes/facebook.html" %}
 
-{% endblock %}
-
-{% block page_script %}
 {% endblock %}
