--- a/lvfu/webapp/templates/welcome.html
+++ b/lvfu/webapp/templates/welcome.html
@@ -1,7 +1,6 @@
 {% extends "base_webapp.html" %}
 
-{% block body %}
-<h1>Fantasy Ultimate!</h1>
+{% block body_content %}
 <p>
     <img src="https://graph.facebook.com/{{ social_auth.facebook.uid }}/picture?format=square"/>
     Welcome, {{ user.first_name }}
