--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,11 @@
   <title>{% block title %}Fantasy Ultimate{% endblock %}</title>
   <meta name="description" content="{% block meta_description %}{% endblock %}"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  {% block default_css %}
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css?v=2012102201" />
+  {% endblock %}
+  {% block page_css %}{% endblock %}
   {% block head %}{% endblock %}
 </head>
 <body class="{% block body_class %}{% endblock %}">
@@ -22,6 +27,7 @@
 
   <script src="http{% if request.is_secure %}s{% endif %}://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery{% if not debug %}.min{% endif %}.js"></script>
   <script>window.jQuery || document.write("<script src='{{ STATIC_URL }}js/libs/jquery-1.7.1{% if not debug %}.min{% endif %}.js'>\x3C/script>")</script>
+  <script src="{{ STATIC_URL }}js/libs/bootstrap.js?v=2012102201"></script>
 
   {% block includes %}{% endblock %}
 
