--- a/lvfu/webapp/templates/base_webapp.html
+++ b/lvfu/webapp/templates/base_webapp.html
@@ -19,7 +19,7 @@
             <ul class="nav pull-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img width="25" height="25" src="{{ user.profile_pic }}/>
+                        <img width="25" height="25" src="{{ user.profile_pic }}"/>
                         Hi, {{ user.first_name }}
                         <b class="caret"></b>
                     </a>
