--- a/lvfu/webapp/templates/team.html
+++ b/lvfu/webapp/templates/team.html
@@ -1,12 +1,31 @@
 {% extends "base_webapp.html" %}
 
+{% block page_css %}
+<style>
+    .ui-roster {
+      width: 500px;
+    }
+</style>
+{% endblock %}
+
 {% block body_content %}
-<p>
+<div class="ui-roster">
     <h2>Your roster:</h3>
-    <ul>
-        {% for player in member.team.all_players %}
-            <li data-id="{{ player.lv_player_id }}">{{ player.extra.lv_player.first_name }} {{ player.extra.lv_player.last_name }}: {{ player.score }}</li>
-        {% endfor %}
-    </ul>
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Player</th>
+                <th>Points</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for player in member.team.all_players %}
+                <tr>
+                    <td>{{ player.extra.lv_player.first_name }} {{ player.extra.lv_player.last_name }}</td>
+                    <td>{{ player.score }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </p>
 {% endblock %}
