--- a/lvfu/webapp/templates/league.html
+++ b/lvfu/webapp/templates/league.html
@@ -43,7 +43,7 @@
             </table>
         </div>
         <div class="tab-pane" id="friends">
-            <table class="table table-striped table-bordered hide">
+            <table class="table table-striped table-bordered js-friends hide">
                 <thead>
                     <tr>
                         <th></th>
@@ -57,6 +57,7 @@
             </table>
             <div class="js-friends-loading">Loading...</div>
             <div class="js-no-friends hide">None of your friends are playing :(</div>
+            <div class="js-fb-not-connected hide">Unable to get your list of friends. Are you logged in to Facebook?</div>
         </div>
     </div>
 </div>
@@ -78,27 +79,36 @@ $(function() {
     $("#tabs a:first").tab('show');
 
     window.onFBInit(function() {
-        FB.api('/me/friends', function(response) {
-            var ids = _.pluck(response.data, 'id');
-            var els = $();
-            $(".js-team-row").each(function() {
-                var el = $(this);
-                if (!el.hasClass("js-my-team")) {
-                    var found = _.detect(ids, function(id) {
-                        return id == el.data("data-id");
+        FB.getLoginStatus(function(response) {
+            if (response.status === 'connected') {
+                FB.api('/me/friends', function(response) {
+                    var ids = _.pluck(response.data, 'id');
+                    var els = $();
+                    $(".js-team-row").each(function() {
+                        var el = $(this);
+                        var elid = el.attr("data-id");
+                        if (!el.hasClass("js-my-team")) {
+                            var found = _.detect(ids, function(id) {
+                                return id == elid;
+                            });
+                            if (!found) {
+                                return;
+                            }
+                        }
+                        els = els.add(el.clone());
                     });
-                    if (!found) {
-                        return;
-                    }
-                }
-                els.add(el.clone());
-            });
 
-            $(".js-friends-loading").hide();
-            if (els.length > 0) {
-                els.appendTo($(".js-friends-body"));
+                    $(".js-friends-loading").hide();
+                    if (els.length > 0) {
+                        els.appendTo($(".js-friends-body"));
+                        $(".js-friends").show();j
+                    } else {
+                        $(".js-no-friends").show();
+                    }
+                });
             } else {
-                $(".js-no-friends").show();
+                $(".js-friends-loading").hide();
+                $(".js-fb-not-connected").hide();
             }
         });
     });
