--- a/lvfu/webapp/templates/league.html
+++ b/lvfu/webapp/templates/league.html
@@ -9,6 +9,9 @@
     .ui-leaderboard-pills {
       float: left;
     }
+    .tab-content {
+      overflow: visible;
+    }
     .ui-invite-friends {
       float: right;
       font-size: 16px;
@@ -18,6 +21,18 @@
     }
     .ui-my-team td {
       background: #fffbcc !important;
+    }
+    .ui-view-roster-icon {
+      display: block;
+      float: right;
+      padding: 5px;
+      line-height: 0;
+    }
+    .ui-roster-loading-image {
+      margin: 10px auto;
+    }
+    .ui-modal-owner-pic {
+      margin-right: 10px;
     }
 </style>
 {% endblock %}
@@ -48,13 +63,14 @@
                 </thead>
                 <tbody>
                     {% for team in teams %}
-                        <tr class="js-team-row{% if team.owner == member %} ui-my-team js-my-team"{% endif %}" data-id="{{ team.owner.fbid }}">
+                        <tr class="js-team-row{% if team.owner == member %} ui-my-team js-my-team"{% endif %}" data-id="{{ team.id }}" data-owner-id="{{ team.owner.fbid }}">
                             <td>#{{ forloop.counter }}</td>
-                            <td>{{ team.title }}</td>
+                            <td class="js-title">{{ team.title }}</td>
                             <td>{{ team.score }}</td>
                             <td>
-                                <img width="25" height="25" src="{{ team.owner.profile_pic }}"/>
+                                <img class="js-owner-pic" width="25" height="25" src="{{ team.owner.profile_pic }}"/>
                                 {{ team.owner.full_name }}
+                                <a href="#" class="ui-view-roster-icon js-view-roster"><i class="icon-zoom-in"></i></a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -84,6 +100,19 @@
     </div>
 </div>
 
+<div class="modal hide" id="roster-modal">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3><img class="ui-modal-owner-pic js-owner-pic" width="24" height="24"/><span class="js-title"></span></h3>
+    </div>
+    <div class="modal-body">
+        <div class="js-wait-content">
+            <img class="ui-roster-loading-image" width="64" height="64" src="{{ STATIC_URL }}img/loading.gif"/>
+        </div>
+        <div class="js-roster-content"></div>
+    </div>
+</div>
+
 {% endblock %}
 
 {% block includes %}
@@ -106,6 +135,38 @@ $(function() {
 
     setRank($("#all"));
 
+    var baseOpts = {
+        trigger: 'hover',
+        placement: 'in right',
+    };
+    $(".js-view-roster").click(function(e) {
+        e.preventDefault();
+
+        var el = $(e.currentTarget);
+        var rowEl = el.closest(".js-team-row");
+
+        var modal = $("#roster-modal");
+        modal.find(".js-owner-pic").attr("src",
+                rowEl.find(".js-owner-pic").attr("src"));
+        modal.find(".js-title").text(rowEl.find(".js-title").text());
+
+        var waitContent = modal.find(".js-wait-content");
+        var rosterContent = modal.find(".js-roster-content");
+
+        waitContent.show();
+        rosterContent.hide();
+
+        // Load into a child so cancelled requests don't interfere with each other
+        rosterContent.html("<div></div>");
+        var url = "{% url 'fragment_roster' %}?team_id=" + rowEl.attr("data-id") + " #content";
+        rosterContent.children().first().load(url, function() {
+            waitContent.hide();
+            rosterContent.show();
+        });
+
+        modal.modal("show");
+    });
+
     $("#tabs a").click(function (e) {
       e.preventDefault();
       $(this).tab('show');
@@ -120,7 +181,7 @@ $(function() {
                     var els = $();
                     $(".js-team-row").each(function() {
                         var el = $(this);
-                        var elid = el.attr("data-id");
+                        var elid = el.attr("data-owner-id");
                         if (!el.hasClass("js-my-team")) {
                             var found = _.detect(ids, function(id) {
                                 return id == elid;
