--- a/lvfu/webapp/templates/fragments/roster.html
+++ b/lvfu/webapp/templates/fragments/roster.html
@@ -1,4 +1,4 @@
-{% extends "fragment_base.html" %}
+{% extends "base_fragment.html" %}
 
 {% block content %}
 <table class="ui-roster-table table table-striped table-bordered">
