--- a/lvfu/webapp/templates/league.html
+++ b/lvfu/webapp/templates/league.html
@@ -52,26 +52,38 @@
 
     <div class="tab-content">
         <div class="tab-pane" id="all">
-            <h1 class="js-rank-line hide">You are currently ranked #<span class="js-rank"></span></h1>
+            {% if league.is_locked %}
+                <h1 class="js-rank-line hide">You are currently ranked #<span class="js-rank"></span></h1>
+            {% endif %}
             <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th></th>
+                        {% if league.is_locked %}
+                            <th></th>
+                        {% endif %}
                         <th>Team</th>
-                        <th>Points</th>
+                        {% if league.is_locked %}
+                            <th>Points</th>
+                        {% endif %}
                         <th>Owner</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for team in teams %}
                         <tr class="js-team-row{% if team.owner == member %} ui-my-team js-my-team"{% endif %}" data-id="{{ team.id }}" data-owner-id="{{ team.owner.fbid }}">
-                            <td>#{{ forloop.counter }}</td>
+                            {% if league.is_locked %}
+                                <td>#{{ forloop.counter }}</td>
+                            {% endif %}
                             <td class="js-title">{{ team.title }}</td>
-                            <td>{{ team.score }}</td>
+                            {% if league.is_locked %}
+                                <td>{{ team.score }}</td>
+                            {% endif %}
                             <td>
                                 <img class="js-owner-pic" width="25" height="25" src="{{ team.owner.profile_pic }}"/>
                                 {{ team.owner.full_name }}
-                                <a href="#" class="ui-view-roster-icon js-view-roster"><i class="icon-zoom-in"></i></a>
+                                {% if league.is_locked %}
+                                    <a href="#" class="ui-view-roster-icon js-view-roster"><i class="icon-zoom-in"></i></a>
+                                {% endif %}
                             </td>
                         </tr>
                     {% endfor %}
@@ -80,13 +92,19 @@
         </div>
         <div class="tab-pane" id="friends">
             <div class="js-friends hide">
-                <h1 class="js-rank-line hide">You are #<span class="js-rank"></span> of your friends</h1>
+                {% if league.is_locked %}
+                    <h1 class="js-rank-line hide">You are #<span class="js-rank"></span> of your friends</h1>
+                {% endif %}
                 <table class="table table-striped table-bordered js-friends">
                     <thead>
                         <tr>
-                            <th></th>
+                            {% if league.is_locked %}
+                                <th></th>
+                            {% endif %}
                             <th>Team</th>
-                            <th>Points</th>
+                            {% if league.is_locked %}
+                                <th>Points</th>
+                            {% endif %}
                             <th>Owner</th>
                         </tr>
                     </thead>
