--- a/lvfu/webapp/templates/base_webapp.html
+++ b/lvfu/webapp/templates/base_webapp.html
@@ -8,17 +8,6 @@
 {% endblock %}
 
 {% block body %}
-<!--GOES RIGHT AFTER THE BEGINNING BODY TAG-->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=517564678270872";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<!--GOES RIGHT AFTER THE BEGINNING BODY TAG-->
-
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
@@ -77,4 +66,8 @@ window.app_data = {
 
 <script src="{{ STATIC_URL}}js/libs/underscore.js"></script>
 <script src="{{ STATIC_URL}}js/lv.js?q=2012102203"></script>
+{% endblock %}
+
+{% block includes %}
+{% include "includes/facebook.html" %}
 {% endblock %}
