Add prizes to rules page

--- a/lvfu/webapp/templates/rules.html
+++ b/lvfu/webapp/templates/rules.html
@@ -48,4 +48,26 @@
         </tr>
     </tbody>
 </table>
+
+<h2>Grand Prize ($375 total value)</h2>
+<ul>
+    <li><a href="http://www.patagonia.com/" target="_blank">Patagonia</a> black hole duffel bag $159</li>
+    <li><a href="http://fiveultimate.com/" target="_blank">Five Ultimate</a> Gift Certificate $100</li>
+    <li><a href="https://www.ngnultimate.com/" target="_blank">NexGen</a> Cap 3 Pullover (L) $55</li>
+    <li>2011 <a href="https://www.ngnultimate.com/" target="_blank">NexGen</a> DVD $15</li>
+    <li>2012 <a href="https://www.ngnultimate.com/" target="_blank">NexGen</a> Tour Subscription $20</li>
+    <li><a href="http://www.ulticards.net/" target="_blank">Ulticards</a> Pack $15</li>
+    <li>Custom Club Championship Poster from <a href="http://hammerfakesandiobreaks.com/" target="_blank">Hammer Fakes and IO Breaks $10</a></li>
+</ul>
+
+<h2>Top 5 finishers plus 5 random contestants will receive one or more of the following prizes:</h2>
+<ul>
+    <li><a href="http://www.patagonia.com/" target="_blank">Patagonia</a> Jersey</li>
+    <li>$10 <a href="http://fiveultimate.com/" target="_blank">Five Ultimate</a> Gift Certificate</li>
+    <li>Poster from <a href="http://hammerfakesandiobreaks.com/" target="_blank">Hammer Fakes and IO Breaks</a></li>
+    <li><a href="https://www.ngnultimate.com/" target="_blank">NexGen</a> Hat</li>
+    <li><a href="https://www.ngnultimate.com/" target="_blank">NexGen</a> Cotton t-shirt</li>
+    <li>2011 <a href="https://www.ngnultimate.com/" target="_blank">NexGen</a> DVD</li>
+    <li>2012 <a href="https://www.ngnultimate.com/" target="_blank">NexGen</a> Tour Subscription</li>
+</ul>
 {% endblock %}
