--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,30 +1,19 @@
-* {
-  position: relative;
-  margin: 0;
-  padding: 0; }
-
-.cl {
-  clear: both;
-  height: 0;
-  font-size: 0;
-  overflow: hidden; }
-
-img {
-  border: none; }
-
 #app-main {
-  padding-top: 80px; }
+  padding-top: 80px;
+}
 
 #footer {
   width: 100%;
   padding: 20px;
   background-color: #f6f6f6;
   border-top: #e4e4e4 1px solid;
-  margin-top: 60px; }
+  margin-top: 60px;
+}
 
 #footer .wrapper {
   width: 960px;
-  margin: auto; }
+  margin: auto;
+}
 
 #footer .wrapper .sponsor a {
   padding: 10px;
@@ -33,10 +22,13 @@ img {
   border: #e4e4e4 1px solid;
   -webkit-border-radius: 3px;
   border-radius: 3px;
-  display: inline-block; }
+  display: inline-block;
+}
 
 #footer .wrapper .type {
-  font-size: 12px; }
+  font-size: 12px;
+}
 
 #footer .wrapper .type a {
-  color: #486673; }
+  color: #486673;
+}
